@@ -1,5 +1,7 @@
 2013-05-09    <simsong@ncr.nps.edu>
 
+	* src/scan_net.cpp (p): carved ethernet packets are now properly recorded in ether.txt and tcp.txt
+
 	* packet carving for disembodied ethernet packets fixed!  In 3ad21780, simsong was creating the hz structure but not setting it, so all carved packets had zero length
 
 2013-05-08    <simsong@ncr.nps.edu>
